chore: minor fixes and AdminService Test
Co-authored-by: Nicolás Margenat <margenatnico@gmail.com>